<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.jshikami235gmail.pr.Sign_Up">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textColor="#009900cc"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="71dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:paddingLeft="15dp"
        android:textColor="#808381" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_signUp"
        android:id="@+id/button"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="79dp"
        android:layout_alignStart="@+id/editText2"
        android:layout_alignEnd="@+id/editText2"
        android:textColor="#fff"
        android:background="#cf4848"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signUp_tv"
        android:id="@+id/textView6"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:textColor="#0099cc" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText5"
        android:paddingBottom="3dp"
        android:layout_below="@+id/textView2"
        android:layout_alignStart="@+id/editText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/et_firstName"
        android:id="@+id/tv_firstName"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:paddingLeft="15dp"
        android:textColor="#808381" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/et1_name"
        android:ems="10"
        android:id="@+id/editText"
        android:paddingBottom="8dp"
        android:layout_below="@+id/tv_firstName"
        android:layout_centerHorizontal="true"
        android:textColor="#808381" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tv_lastName"
        android:id="@+id/textView4"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:paddingBottom="3dp"
        android:paddingTop="20dp"
        android:paddingLeft="15dp"
        android:textColor="#808381" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/Tv_lastName"
        android:ems="10"
        android:id="@+id/editText2"
        android:paddingBottom="8dp"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/editText"
        android:textColor="#808381" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/pwd_Tv"
        android:id="@+id/textView5"
        android:layout_below="@+id/editText2"
        android:layout_alignParentStart="true"
        android:paddingTop="20dp"
        android:paddingLeft="15dp"
        android:textColor="#808381" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText3"
        android:layout_below="@+id/textView5"
        android:layout_toStartOf="@+id/textView" />

</RelativeLayout>
